Logo fix, mobile broken again

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --color-primary: #123a98;
-  --color-primary-light: #f7fcfa;
+  --color-primary-light: #ffffff;
   --color-primary-medium: #485c8c;
   --color-primary-dark: #011541;
   --color-accent-light: #a5bad7;
@@ -16,7 +16,7 @@
   --color-primary: #a5bad7;
   --color-primary-light: #011541;
   --color-primary-medium: #485c8c;
-  --color-primary-dark: #f7fcfa;
+  --color-primary-dark: #ffffff;
   --color-accent-light: #192f61;
   --color-accent-medium: #042061;
   --color-accent-dark: #123a98;
